<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="412dp"
    android:layout_height="847dp"
    tools:context=".MainActivity"
    android:backgroundTint="@color/mainbg"

    >

    <LinearLayout
        android:id="@+id/linear01"
        android:layout_width="412dp"
        android:layout_height="90dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="0dp"
        >

        <ImageView
            android:id="@+id/headerPic"
            android:layout_width="397dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:src="@drawable/headerbar"
            android:contentDescription="Header bar"
            android:alpha="0.4"

            />

        <TextView
            android:id="@+id/addUsers"
            android:layout_width="127dp"
            android:layout_height="35dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="25.06dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="20.94dp"
            android:fontFamily="@font/opensanssemibold"
            android:gravity="center_horizontal"
            android:text="@string/add_users"
            android:textColor="@color/addUsers"
            android:textSize="23dp" />

    </LinearLayout>

     <LinearLayout
        android:id="@+id/linearnameandclg"
        android:layout_width="358.61dp"
        android:layout_height="125.34dp"

        android:layout_marginStart="26.81dp"
        android:layout_marginTop="83.89dp"
        android:layout_marginEnd="26.81dp"
        android:layout_marginBottom="26.81dp"

        android:orientation="vertical"

         >


         <TextView
             android:id="@+id/tvname1"
             android:layout_width="63dp"
             android:layout_height="22dp"

             android:layout_marginTop="15dp"

             android:fontFamily="@font/opensansregular"
             android:text="@string/name"
             android:textColor="@color/color1"
             android:textSize="15dp"

             />


         <EditText
             android:id="@+id/etname"
             android:layout_width="300dp"

             android:layout_height="38dp"
             android:height="22dp"

             android:inputType="text"
             android:textColor="@color/addUsers"
             android:textSize="16dp"
             android:alpha="0.6"

             />

         <TextView
             android:id="@+id/tvcollege1"
             android:layout_width="101dp"
             android:layout_height="wrap_content"

             android:fontFamily="@font/opensansregular"
             android:text="@string/college_name"
             android:textColor="@color/color1"
             android:textSize="15dp"

             />


         <EditText
             android:id="@+id/etclgname"
             android:layout_width="300dp"

             android:layout_height="38dp"
             android:height="22dp"
             android:inputType="text"
             android:textColor="@color/addUsers"
             android:textSize="16dp"

             android:alpha="0.5"

             />


     </LinearLayout>


    <TextView
        android:id="@+id/tvgender1"
        android:layout_width="90dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="26.81dp"
        android:layout_marginTop="215.28dp"
        android:layout_marginEnd="325.19dp"

        android:layout_marginBottom="599.72dp"
        android:fontFamily="@font/opensansregular"
        android:text="@string/gender"
        android:textColor="@color/color1"
        android:textSize="15dp"

        />

    <TextView
        android:id="@+id/tvmale1"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="26.81dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="345dp"

        android:layout_marginBottom="561dp"
        android:fontFamily="@font/opensansregular"
        android:text="@string/male"
        android:textColor="@color/color2"
        android:textSize="16dp"


        />

    <TextView
        android:id="@+id/radiomale1"
        android:layout_width="18dp"
        android:layout_height="18dp"

        android:layout_marginStart="83.03dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="300.4dp"
        android:layout_marginBottom="561dp"



        android:background="@drawable/radiobutton"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/tvfemale1"

        android:layout_marginTop="245dp"
        android:layout_marginBottom="561dp"
        android:layout_marginStart="132.81dp"
        android:layout_marginEnd="0dp"

        android:text="@string/female"
        android:textSize="16dp"
        android:textColor="@color/color2"
        android:fontFamily="@font/opensansregular"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:id="@+id/radiofemale1"
        android:layout_marginStart="207.03dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="2.4dp"
        android:layout_marginBottom="561dp"

        android:background="@drawable/radiobutton"


        />

    <TextView
        android:id="@+id/tvbtech1"
        android:layout_width="147dp"
        android:layout_height="20dp"

        android:layout_marginStart="26.81dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="250.19dp"
        android:layout_marginBottom="515.42dp"

        android:fontFamily="@font/opensansregular"
        android:text="@string/btech"
        android:textColor="@color/color1"
        android:textSize="15dp" />


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="325dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="26.81dp"
        android:layout_marginTop="283.6dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="570.74dp"

        android:background="@drawable/spinner_style"

        android:padding="3dp" />

    <EditText
        android:id="@+id/etpassyear"
        android:layout_width="300dp"

        android:layout_height="38dp"

        android:layout_marginStart="26.81dp"
        android:layout_marginTop="290.6dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="570.74dp"

        android:editable="false"
        android:textColor="@color/addUsers"

        android:alpha="0.3"

        />


    <TextView
        android:id="@+id/tvdob1"
        android:layout_width="40dp"

        android:layout_height="17dp"
        android:layout_marginStart="26.81dp"
        android:layout_marginTop="327.73dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="458.27dp"

        android:fontFamily="@font/opensansregular"
        android:text="@string/dob"
        android:textColor="@color/color1"
        android:textSize="15dp" />




    <TextView
        android:id="@+id/tvselectdobdate1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"

        android:layout_marginStart="26.81dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="430dp"

        android:fontFamily="@font/opensansregular"
        android:text="@string/dobDate"
        android:textColor="@color/color2"
        android:textSize="17dp"

        />


    <Button
        android:id="@+id/imgdob1"
        android:layout_width="25dp"
        android:layout_height="25dp"

        android:layout_marginEnd="33.41dp"
        android:layout_marginStart="325dp"
        android:layout_marginTop="342dp"
        android:layout_marginBottom="436dp"

        android:background="@drawable/dobimg"

        />

    <EditText
        android:id="@+id/etdob"
        android:layout_width="300dp"

        android:layout_height="38dp"

        android:layout_marginStart="26.81dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="430dp"

        android:editable="false"
        android:textColor="@color/addUsers"

        android:alpha="0.3"

        />




    <TextView
        android:layout_width="150dp"
        android:layout_height="17dp"

        android:id="@+id/tvdateandtime1"
        android:layout_marginStart="26.81dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="397dp"

        android:fontFamily="@font/opensansregular"
        android:text="@string/dobTime"
        android:textColor="@color/color1"
        android:textSize="15dp"
        />



    <TextView
        android:id="@+id/tvselectdatetime1"
        android:layout_width="180dp"
        android:layout_height="20dp"

        android:layout_marginStart="27.78dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="375dp"

        android:fontFamily="@font/opensansregular"
        android:text="@string/selectdatetime"
        android:textColor="@color/color2"
        android:textSize="17dp"

        />

    <Button
        android:id="@+id/imgdatetime1"
        android:layout_width="25dp"
        android:layout_height="25dp"

        android:layout_marginStart="325dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="400dp"

        android:background="@drawable/dobimg"

        />

    <EditText
        android:id="@+id/etdatetime"
        android:layout_width="300dp"

        android:layout_height="38dp"

        android:layout_marginStart="27.78dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="375dp"

        android:editable="false"
        android:textColor="@color/addUsers"

        android:alpha="0.3"

        />


    <TextView
        android:id="@+id/tvhowuratestar1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="26.81dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="327dp"

        android:fontFamily="@font/opensansregular"
        android:text="@string/howdourate"
        android:textColor="@color/color1"
        android:textSize="15dp"

        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingbar"

        android:layout_marginTop="463dp"
        android:layout_marginStart="26.81dp"

        android:numStars="5"
        android:progressTint="@color/fillingstar"
        android:stepSize="1"
        android:rating="2"

        android:scaleX="0.7"
        android:scaleY="0.7"

        android:transformPivotX="5dp"
        android:transformPivotY="5dp"



        />

    <TextView
        android:id="@+id/tvhowurateinonetofive"
        android:layout_width="250dp"
        android:layout_height="20dp"

        android:layout_marginStart="26.81dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="150.69dp"
        android:layout_marginBottom="268dp"

        android:fontFamily="@font/opensansregular"
        android:text="@string/howurate"
        android:textColor="@color/color1"
        android:textSize="15dp"

        />


    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="25dp"

        android:layout_height="18dp"

        android:layout_marginStart="30.81dp"
        android:layout_marginTop="542dp"
        android:layout_marginEnd="36.5dp"


    />


    <TextView
        android:id="@+id/checkboxtextone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="68dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="34dp"


        android:fontFamily="@font/opensansregular"
        android:text="@string/_1"
        android:textColor="@color/addUsers"
        android:textSize="17dp"


        />




    <CheckBox
        android:layout_width="25dp"
        android:layout_height="18dp"

        android:id="@+id/checkbox2"

        android:layout_marginStart="84.81dp"
        android:layout_marginTop="542dp"
        android:layout_marginEnd="30.19dp"



        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/checkboxtexttwo2"

        android:layout_marginStart="122.62dp"
        android:layout_marginTop="540dp"

        android:text="@string/_2"
        android:textSize="17dp"
        android:fontFamily="@font/opensansregular"
        android:textColor="@color/addUsers"


        />

    <CheckBox
        android:layout_width="25dp"
        android:layout_height="18dp"

        android:layout_marginStart="143.43dp"
        android:layout_marginTop="542dp"
        android:layout_marginEnd="25.57dp"
        android:layout_marginBottom="540dp"

        android:id="@+id/checkbox3"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/checkboxtextthree3"

        android:layout_marginStart="178.24dp"
        android:layout_marginTop="540dp"

        android:text="@string/_3"
        android:textSize="17dp"
        android:fontFamily="@font/opensansregular"
        android:textColor="@color/addUsers"

        />


    <CheckBox
        android:layout_width="25dp"
        android:layout_height="18dp"

        android:id="@+id/checkbox4"


        android:layout_marginStart="200.05dp"
        android:layout_marginTop="542dp"
        android:layout_marginEnd="19.95dp"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/checkboxtextfour4"

        android:layout_marginLeft="236.86dp"
        android:layout_marginTop="540dp"



        android:text="@string/_4"
        android:textSize="17dp"
        android:fontFamily="@font/opensansregular"
        android:textColor="@color/addUsers"


        />



    <CheckBox
        android:layout_width="25dp"
        android:layout_height="18dp"

        android:id="@+id/checkbox5"


        android:layout_marginStart="260.67dp"
        android:layout_marginTop="542dp"
        android:layout_marginEnd="13.33dp"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/checkboxtextfive5"

        android:layout_marginStart="295.48dp"
        android:layout_marginTop="540dp"



        android:text="@string/_5"
        android:textSize="17dp"
        android:fontFamily="@font/opensansregular"
        android:textColor="@color/addUsers"


        />


    <Button
        android:id="@+id/submitbtn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="27.36dp"

        android:layout_marginBottom="43dp"
        android:background="@drawable/btnshape"
        android:text="@string/submit"
        android:textColor="@color/white"

        />



</RelativeLayout>